test: add ir support

--- a/android/src/main/res/layout/activity_main.xml
+++ b/android/src/main/res/layout/activity_main.xml
@@ -16,12 +16,17 @@
         android:background="#ff000000"
         android:gravity="center">
 
+         <com.fppreactnativemodule.camera.CameraPreview
+            android:id="@+id/preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center" />
 
         <com.fppreactnativemodule.camera.CameraPreview
-            android:id="@+id/preview"
-            android:layout_width="900px"
-            android:layout_height="900px"
-            android:layout_gravity="center_vertical" />
+                android:id="@+id/previewIR"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:layout_gravity="right" />
 
         <com.fppreactnativemodule.FaceView
             android:id="@+id/fcview"
