--- a/android/src/main/res/layout-land/activity_main.xml
+++ b/android/src/main/res/layout-land/activity_main.xml
@@ -23,6 +23,12 @@
             android:layout_height="match_parent"
             android:layout_gravity="center" />
 
+        <com.fppreactnativemodule.camera.CameraPreview
+                android:id="@+id/previewIR"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:layout_gravity="right" />
+
         <com.fppreactnativemodule.FaceView
             android:id="@+id/fcview"
             android:layout_width="wrap_content"
