--- a/android/src/main/res/layout-land/activity_main.xml
+++ b/android/src/main/res/layout-land/activity_main.xml
@@ -28,7 +28,11 @@
                 android:layout_width="0px"
                 android:layout_height="0px"
                 android:layout_gravity="right" />
-
+        <com.fppreactnativemodule.camera.CameraPreview
+                android:id="@+id/previewIRHidden"
+                android:layout_width="1px"
+                android:layout_height="1px"
+                android:layout_gravity="right" />
         <com.fppreactnativemodule.FaceView
             android:id="@+id/fcview"
             android:layout_width="wrap_content"
